# ODIN

./: .gitignore  AGENTS.md  README.md
docker/full_distributed/: .env.example  Dockerfile.odin  Dockerfile.qwen  README.md  compose.desktop.yaml  compose.qwen.yaml  compose.robot_1.yaml  compose.robot_2.yaml  compose.robot_3.yaml
docker/full_distributed/scripts/: run_ai_planner.sh  run_desktop_central.sh  run_robot3_rescue.sh  run_robot_scout.sh
docker/qwen_plus_desktop/: .env.example  Dockerfile.odin  Dockerfile.qwen  README.md  compose.yaml
docker/qwen_plus_desktop/scripts/: entrypoint.sh  run_odin_full.sh  run_qwen_server.sh
explore_lite/src/: explore.cpp
multirobot_map_merge/: CMakeLists.txt
multirobot_map_merge/config/: params.yaml
odin_ai/: package.xml  setup.cfg  setup.py
odin_ai/config/: heuristic_waypoint_recommender.yaml  virtual_qwen_planner.yaml
odin_ai/launch/: heuristic_waypoint_recommender.launch.py  virtual_qwen_planner.launch.py
odin_ai/odin_ai/: heuristic_waypoint_recommender.py  mission_intent_panel.py  virtual_qwen_planner.py
odin_bringup/: package.xml  setup.cfg  setup.py
odin_bringup/config/: battlefield_rules.yaml
odin_bringup/launch/: multi_slam_map_merge.launch.py  sim_multi_slam_map_merge.launch.py
odin_coordinator/: package.xml  setup.cfg  setup.py
odin_coordinator/config/: rescue_coordinator.yaml
odin_coordinator/launch/: rescue_coordinator.launch.py
odin_coordinator/odin_coordinator/: rescue_coordinator.py
odin_detection/: package.xml  setup.cfg  setup.py
odin_detection/config/: gazebo_aruco_event_detector.yaml  rgb_aruco_event_detector.yaml
odin_detection/launch/: gazebo_aruco_event_detector.launch.py  rgb_aruco_event_detector.launch.py
odin_detection/odin_detection/: gazebo_aruco_event_detector.py  rgb_aruco_event_detector.py
odin_exploration/: package.xml  setup.cfg  setup.py
odin_exploration/config/: reactive_scouts.yaml
odin_exploration/launch/: reactive_scouts.launch.py
odin_exploration/odin_exploration/: reactive_scout.py
odin_gazebo/: package.xml  setup.cfg  setup.py
odin_gazebo/launch/: house_easier_three_robots.launch.py
odin_gazebo/models/aruco_marker_0/: model.config  model.sdf
odin_gazebo/models/aruco_marker_0/materials/scripts/: aruco_marker_0.material
odin_gazebo/models/house/: model.config
odin_gazebo/worlds/: 11.world  odin_rescue_20x20.world  odin_rescue_20x20_b.world  odin_rescue_20x20_c.world  rescue_walls_easy.world  tb3_indoor_obstacles.world
odin_interfaces/: CMakeLists.txt  package.xml
odin_interfaces/msg/: HostageEvent.msg
odin_map_merge/: package.xml  setup.cfg  setup.py
odin_map_merge/config/: scenario_scan_map_merge.yaml
odin_map_merge/launch/: scenario_scan_map_merge.launch.py
odin_map_merge/odin_map_merge/: scenario_scan_map_merge.py
odin_navigation/: package.xml  setup.cfg  setup.py
odin_navigation/config/: explore_robot_1.yaml  explore_robot_2.yaml  nav2_robot_1.yaml  nav2_robot_2.yaml  nav2_robot_3.yaml  robot_3_simple_dispatch.yaml
odin_navigation/launch/: nav2_exploration.launch.py  robot_3_nav2_dispatch.launch.py  robot_3_simple_dispatch.launch.py
odin_navigation/odin_navigation/: mission_status_panel.py  mission_success_marker.py  mission_success_popup.py  nav2_goal_dispatcher.py  qwen_dialog_panel.py  qwen_route_map_panel.py  robot_3_spawn_on_goal.py  robot_3_speed_policy.py  robot_scan_filter.py  simple_goal_follower.py
odin_slam/: package.xml  setup.cfg  setup.py
odin_slam/config/: slam_toolbox.yaml
odin_slam/launch/: multi_slam.launch.py
