<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odin_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch files for ODIN-RESCUE.</description>
  <maintainer email="odin@example.com">odin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>multirobot_map_merge</exec_depend>
  <exec_depend>odin_exploration</exec_depend>
  <exec_depend>odin_gazebo</exec_depend>
  <exec_depend>odin_map_merge</exec_depend>
  <exec_depend>odin_slam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
